--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,6 +6,14 @@
     <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
   </head>
   <body>
-      <h1>Hello, {{user.nickname}}!</h1>
+      <ul data-role="listview" data-filter="true" data-filter-placeholder="Search comics..." data-inset="true">
+      {% if comics %}
+        {% for comic in comics %}
+          <li><a href="view/{{ comic }}">{{comic}}</a></li>
+        {% endfor %}
+      {% else %}
+        <li>No comics found :(</li>
+      {% endif %}
+       </ul>
   </body>
 </html>
