End of day save

--- a/app/templates/view_page.html
+++ b/app/templates/view_page.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Comic Viewer - {{comic.name}}</title>
+    <title>Comic Viewer - {{comicbook.name}}</title>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css" />
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
@@ -8,10 +8,10 @@
   <body>
     <div data-role="navbar">
       <ul>
-        <li><a href="//" data-icon="home" data-icon-pos="left">Home</a></li>
-        <li><a href="//view/{{comic.name}}" class="ui-btn-active">{{comic.name}}</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/{{comicbook.name}}" class="ui-btn-active">{{comicbook.name}}</a></li>
       </ul>
     </div><!-- /navbar -->
-    <img src="//img/{{comic}}/{{comic.section}}/{{comic.section.page}}"
+    <img src="img/{{comicbook.get_image() }}">
   </body>
 </html>
