--- a/app/templates/view_page.html
+++ b/app/templates/view_page.html
@@ -12,6 +12,6 @@
         <li><a href="/{{comicbook.name}}" class="ui-btn-active">{{comicbook.name}}</a></li>
       </ul>
     </div><!-- /navbar -->
-    <img src="img/{{comicbook.get_image() }}">
+    <img src="{{comicbook.get_image() }}">
   </body>
 </html>
