--- a/app/templates/comic_index.html
+++ b/app/templates/comic_index.html
@@ -19,7 +19,7 @@
       {% endfor -%}
     </ul>
     {% elif comicbook.filelist -%}
-    <a href="{{comicbook.get_next_image() }}"><img src="{{comicbook.get_image() }}"></a>
+    <a href="{{comicbook.get_next_image(filename) }}"><img src="{{comicbook.get_image(filename) }}"></a>
     {% else -%}
     <ul data-role="listview">
       <li>No comics/pages found :(</li>
