--- a/app/templates/comic_index.html
+++ b/app/templates/comic_index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     {% if comicbook.filelist -%}
-    <div data-role="page" data-prev="{{comicbook.get_prev_image() }}" data-next="{{comicbook.get_next_image() }}" data-prefetch data-fullscreen="true" data-url="/{{comicbook.path}}">
+    <div data-role="page" data-prev="{{comicbook.get_prev_image() }}" data-next="{{comicbook.get_next_image() }}" data-prefetch data-fullscreen="true">
     {% endif -%}
     <div data-role="navbar">
       <ul>
@@ -20,7 +20,7 @@
     {% if comicbook.dirlist -%}
     <ul data-role="listview">
       {% for dir in comicbook.dirlist -%}
-        <li><a href="/{{ comicbook.path }}{{dir}}" data-prefetch><img src="/{{comicbook.path}}{{dir}}/thumbnail">{{dir}}</a></li>
+        <li><a href="/{{ comicbook.name }}/{{dir}}" data-prefetch><img src="/{{comicbook.name}}/{{dir}}/thumbnail">{{dir}}</a></li>
       {% endfor -%}
     </ul>
     {% elif comicbook.filelist -%}
