--- a/app/templates/comic_index.html
+++ b/app/templates/comic_index.html
@@ -6,6 +6,9 @@
     <script src="/swipepage.js"></script>
     <script src="//code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="apple-touch-icon" href="/ios_icon.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
   </head>
   <body>
     {% if comicbook.filelist -%}
